[gd_scene load_steps=4 format=3 uid="uid://kjqk2mvi27w5"]

[ext_resource type="Script" path="res://Scripts/base_level.gd" id="1_qtrqg"]
[ext_resource type="MeshLibrary" uid="uid://b1f0rmuv308w2" path="res://Resources/full_tile_library.tres" id="2_keqcj"]
[ext_resource type="PackedScene" uid="uid://bn1or4hciu8pi" path="res://Scenes/exit_portal.tscn" id="2_vkdpm"]

[node name="BaseLevel" type="Node3D"]
script = ExtResource("1_qtrqg")

[node name="Tiles" type="GridMap" parent="."]
mesh_library = ExtResource("2_keqcj")
collision_layer = 32
collision_mask = 3

[node name="Doodads" type="GridMap" parent="."]
mesh_library = ExtResource("2_keqcj")
collision_layer = 32
collision_mask = 3

[node name="ExitPortal" parent="." instance=ExtResource("2_vkdpm")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 26.8185, 1.33986, 0)
monitoring = false
monitorable = false

[node name="SpawnPoint" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -22.9852, 1.58028, 0)

[connection signal="body_entered" from="ExitPortal" to="." method="_on_exit_portal_body_entered"]
